# rag-platform-eks

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tf-validate.yml
docs/: CLAUDE.md  build-plan.md  cost-model.md  decisions.md
docs/adr/: ADR-001-custom-rag-pipeline-vs-managed-service.md  ADR-001-llm-routing-strategy.md  ADR-002-llm-routing-strategy.md  ADR-002-vector-database-selection.md  ADR-003-gateway-api-controller.md  ADR-003-vector-database-selection.md  ADR-004-gateway-api-controller.md  ADR-005-eks-pod-identity-over-irsa.md  ADR-006-vllm-model-serving.md  ADR-007-multi-tenant-isolation-model.md  ADR-007-network-security-and-defense-in-depth.md  ADR-008-network-security-and-defense-in-depth.md  ADR-009-defer-vpc-interface-endpoints.md  README.md  _template.md
docs/architecture/: 01-system-context.md  02-container-diagram.md  03-request-flow.md  04-ingestion-flow.md  05-llm-routing.md  06-infrastructure.md  07-multi-tenancy.md  08-observability.md
docs/runbooks/: bedrock-quota-exhausted.md  gpu-node-troubleshooting.md  litellm-fallback-triggered.md  pgvector-slow-queries.md
helm/: CLAUDE.md
helm/litellm/: values.yaml
helm/vllm/: Chart.yaml  (+1 more)
infra/: cluster-state.md
scripts/: bootstrap_keys.py  destroy.py  docker_build.py  ecr_setup.py  exercise_budget_429.py  fmt.py  lint.py  provision.py  test.py  tf_validate.py
src/: CLAUDE.md
terraform/: CLAUDE.md
(+44 files in other folders)
